add logo & link for UFF to earth day splash page

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -54,6 +54,9 @@
             <a href="https://cclsve.org" target="_blank">
               <img src="images/cclsve_logo.png" alt="Citizens' Climate Lobby Silicon Valley East"/>
             </a>
+            <a href="https://sites.google.com/view/tri-cityurbanforestalliance" target="_blank">
+              <img src="images/earth_day_attendee_urban_forest_friends.jpg" alt="Urban Forest Friends"/>
+            </a>
           </div><!-- logos -->
           <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
