--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -57,6 +57,9 @@
             <a href="https://sites.google.com/view/tri-cityurbanforestalliance" target="_blank">
               <img src="images/earth_day_attendee_urban_forest_friends.jpg" alt="Urban Forest Friends"/>
             </a>
+            <a href="https://www.facebook.com/groups/291548095736348" target="_blank">
+              <img src="images/earth_day_attendee_do_more_group.jpg" alt="Do More Group"/>
+            </a>
           </div><!-- logos -->
           <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
