--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -60,6 +60,9 @@
             <a href="https://www.facebook.com/groups/291548095736348" target="_blank">
               <img src="images/earth_day_attendee_do_more_group.jpg" alt="Do More Group"/>
             </a>
+            <a href="https://www.thorntoneands.org" target="_blank">
+              <img src="images/earth_day_attendee_tjhs_esc.jpg" alt="Thornton Jr. High Energy & Sustainability Club"/>
+            </a>
           </div><!-- logos -->
           <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
