add logo & link for Generation Atomic to Earth Day splash page

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -63,6 +63,9 @@
             <a href="https://www.thorntoneands.org" target="_blank">
               <img src="images/earth_day_attendee_tjhs_esc.jpg" alt="Thornton Jr. High Energy & Sustainability Club"/>
             </a>
+            <a href="https://www.generationatomic.org" target="_blank">
+              <img src="images/earth_day_attendee_generation_atomic.jpeg" alt="Generation Atomic"/>
+            </a>
           </div><!-- logos -->
           <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
