Earth Day page: add logos & links for Sierra Club & Mission Peak Conservancy

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -66,6 +66,12 @@
             <a href="https://www.generationatomic.org" target="_blank">
               <img src="images/earth_day_attendee_generation_atomic.jpeg" alt="Generation Atomic"/>
             </a>
+            <a href="https://www.sierraclub.org" target="_blank">
+              <img src="images/earth_day_attendee_sierra_club.png" alt="Sierra Club"/>
+            </a>
+            <a href="http://www.missionpeakconservancy.net" target="_blank">
+              <img src="images/earth_day_attendee_mission_peak_conservancy.jpg" alt="Mission Peak Conservancy"/>
+            </a>
           </div><!-- logos -->
           <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
