Update to indicate that the Earth Day event is now over
- removed the link from the front page
- created a "past events" section on the events page and moved it there
- changed verb tenses on the splash page to past tense
- added a photo gallery to the splash page

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -25,6 +25,23 @@
           <h2>October 22, 2022</h2>
           <p>10 AM - 2 PM</p>
         </div>
+        <div class="detail">
+          <p>Thank you for joining our event!  It was great to see everyone who came out for it.</p>
+        </div>
+        <div class="detail gallery">
+          <h2>Photo gallery</h2>
+          <img src="images/earth_day_photos_tables_from_lake.jpg" alt="Photo of different environmental groups' tables, from the front"/>
+          <img src="images/earth_day_photos_tables_from_side.jpg" alt="Photo of different environmental groups' tables, from the side"/>
+          <img src="images/earth_day_photos_ccl_table.jpg" alt="Photo of the CCL table"/>
+          <img src="images/earth_day_photos_brief_remarks.jpg" alt="Photo of Lisa speaking to the Earth Day event attendees"/>
+          <img src="images/earth_day_photos_abe_climate_voter.jpg" alt="Photo of Abe holding climate voter sign"/>
+          <img src="images/earth_day_photos_councilmember_jenny_kassan.png" alt="Photo of Councilmember Jenny Kassan holding climate voter sign"/>
+          <img src="images/earth_day_photos_irm_climate_voter.jpg" alt="Photo of Irm holding climate voter sign"/>
+          <img src="images/earth_day_photos_parent_climate_voter.jpg" alt="Photo of one of the parents holding climate voter sign"/>
+          <img src="images/earth_day_photos_karl_climate_voter.jpg" alt="Photo of Karl holding climate voter sign"/>
+          <img src="images/earth_day_photos_paula_climate_voter.jpg" alt="Photo of Paula holding climate voter sign"/>
+          <img src="images/earth_day_photos_mary_lisa_climate_voters.jpg" alt="Photo of Mary and Lisa holding climate voter sign"/>
+        </div>
         <div class="detail where">
           <div class="where-info">
             <div class="address">
@@ -44,7 +61,7 @@
         </div><!-- detail where -->
         <div class="detail walks">
           <h2>Walk &amp; talk about climate</h2>
-          <p>Enjoy thoughtful discussions with local environmental volunteers while walking around Lake Elizabeth.</p>
+          <p>We enjoyed thoughtful discussions with environmental volunteers while walking around Lake Elizabeth.</p>
           <p>@ 10:00 AM</p>
           <p>@ 11:30 AM</p>
         </div>
@@ -73,7 +90,6 @@
               <img src="images/earth_day_attendee_generation_atomic.jpeg" alt="Generation Atomic"/>
             </a>
           </div><!-- logos -->
-          <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
         <div class="detail directions">
           <h2>Directions</h2>
@@ -86,21 +102,20 @@
         </div><!-- detail directions -->
         <div class="detail election">
           <h2>Election Information</h2>
-          <p>Voter registration forms will be available at our Earth Day event. However, please register sooner to receive your ballots and election info by mail.</p>
           <p>Election Day is <strong>November 8, 2022</strong>.  If you mail in your ballot, it must by postmarked November 8 or earlier. You can vote in person or drop your ballot in an official drop box by 8 PM on November 8. In-person early voting is available for 11 days at select locations and for 4 days at the remaining locations.</p>
-          <p>Register to vote or check your voter registration status at <a href="http://vote.ca.gov" target="_blank">vote.ca.gov</a>.  The deadline to <a href="https://registertovote.ca.gov/" target="_blank">register to vote</a> for this election is October 24, 2022.</p>
-          <p>Ballots will be mailed out to all registered California voters by October 10.</p>
-          <p>Check your county's Registrar of Voters website for details about where, when, and how to vote.  Check if the voting details apply to June or November because some pages on these county sites are still being updated for the November election.</p>
+          <p>Register to vote or check your voter registration status at <a href="http://vote.ca.gov" target="_blank">vote.ca.gov</a>.  The deadline to register to vote for this election was October 24, 2022. If you missed the deadline, same-day registration is available at the in-person vote centers.</p>
+          <p>Ballots were mailed out to all registered California voters by October 10.</p>
+          <p>Check your county's Registrar of Voters website for details about where, when, and how to vote.</p>
           <ul>
             <li>Alameda County: <a href="https://www.acvote.org" target="_blank">acvote.org</a>
               <ul>
-                <li>Stay tuned for information about in-person voting at <a href="https://acgov.org/rov_app/vcalist" target="_blank">Alameda County vote centers</a>.</li>
+                <li>Information about in-person voting: <a href="https://acgov.org/rov_app/vcalist" target="_blank">Alameda County vote centers</a></li>
                 <li>24-hour ballot drop-off is available at <a href="https://www.acgov.org/rovapps/maps/ballotdropbox_map.htm" target="_blank">Alameda Country ballot drop boxes</a> from October 10 until 8 PM on November 8, 2022 (Election Day).</li>
               </ul>
             </li>
             <li>Santa Clara County: <a href="https://sccvote.sccgov.org/home" target="_blank">sccvote.sccgov.org</a>
               <ul>
-                <li>Stay tuned for information about in-person voting at  <a href="https://sccvote.sccgov.org/vote-person/official-vote-center-list-and-schedule" target="_blank">Santa Clara County vote centers</a>.</li>
+                <li>Information about in-person voting:  <a href="https://sccvote.sccgov.org/vote-person/official-vote-center-list-and-schedule" target="_blank">Santa Clara County vote centers</a></li>
                 <li>24-hour ballot drop-off is available at <a href="https://sccvote.sccgov.org/vote-mail/official-ballot-drop-box-sites-and-early-voting-information" target="_blank">Santa Clara County ballot drop boxes</a> from October 10 until 8 PM on November 8, 2022 (Election Day).</li>
               </ul>
             </li>
