--- a/web/events.html
+++ b/web/events.html
@@ -38,27 +38,28 @@
   <div class="page-main-events">
   	<p> We have a few regularly scheduled events every month.   If you <a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">join CCL</a> you will be added to our Chapter mailing list and get e-mailed announcements of upcoming Chapter meetings.  You can then also join our Google groups for interim updates and notifications. </p>
 
-  <h2 class="event-title">Regular Events</h2>    
+    <h2 class="event-title">Regular Events</h2>    
     <h3> Chapter Meetings</h3>
-	 <p> We meet on the second Saturday of every month at 4 pm.  New members should join at 3:30 for an orientation.  Our meetings have been mostly online since COVID began, but we are hoping to have more in-person meetings in the future. </p>
-	 <p> Join our <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/" target="_blank">Meetup</a> to get notifications of meetings. You can also write us directly at the address in the footer for the link/directions.
-     <h3> Work Sessions </h3>
-	 <p> These are informal get-togethers, via zoom, where we work on group or individual CCL projects.  This helps those of us prone to procrastination, but also gives us space to get feedback. It's also a great time for newer members to ask questions and get training in things like writing letters to the editor. </p>
-	 <p> We usually determine the date/time at the Chapter meeting, and it is available to members in the minutes.</p>
-     <h3> Tabling </h3>
-	 <p> In addition to special events (like Earth Day) we also staff information tables every month at local farmers' markets. You can help even if you're very new -- it's a great way to learn from more experienced members!</p>
-	 <p> Right now we are at the Hayward market on the third Saturday of odd months and at the Newark one on the third Sunday of even months.  Stop by to chat with one of us!</p>
+	  <p> We meet on the second Saturday of every month at 4 pm.  New members should join at 3:30 for an orientation.  Our meetings have been mostly online since COVID began, but we are hoping to have more in-person meetings in the future. </p>
+	  <p> Join our <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/" target="_blank">Meetup</a> to get notifications of meetings. You can also write us directly at the address in the footer for the link/directions.
+      <h3> Work Sessions </h3>
+	  <p> These are informal get-togethers, via zoom, where we work on group or individual CCL projects.  This helps those of us prone to procrastination, but also gives us space to get feedback. It's also a great time for newer members to ask questions and get training in things like writing letters to the editor. </p>
+	  <p> We usually determine the date/time at the Chapter meeting, and it is available to members in the minutes.</p>
+      <h3> Tabling </h3>
+	  <p> In addition to special events (like Earth Day) we also staff information tables every month at local farmers' markets. You can help even if you're very new -- it's a great way to learn from more experienced members!</p>
+	  <p> Right now we are at the Hayward market on the third Saturday of odd months and at the Newark one on the third Sunday of even months.  Stop by to chat with one of us!</p>
      
     <h2 class="event-title">Special Events</h2> 
       
-      <h3>Earth Day: Election Edition</h3>
-      <p>The Earth deserves to be celebrated more than once per year!  We are celebrating Earth Day's half-birthday on October 22, 2022 from 10 AM - 2 PM at Lake Elizabeth in Fremont.  See our <a href="/OctoberEarthDay2022">Earth Day: Election Edition</a> page for more details.</p>
      <h3> Town Halls </h3>
        	 <p> Attending town halls and asking climate-related questions serves both to demonstrate our concern to the Representative and to foster awareness among other community attendees. 
 	 <p>To find out about upcoming town halls, sign up for your Rep's mailing list (<a href= "https://khanna.house.gov/contact/newsletter" target="_blank">Ro Khanna</a>, <a href= "https://swalwell.house.gov/contact/newsletter" target="_blank"> Eric Swalwell</a>).</p>	  
 	  
      <h3> Other events </h3>
      <p> We occasionally have other tabling opportunities, workshops or special events.  To be notified of those, it is best to join the chapter and sign up for our active-member Google group.</p>
+    <h2 class="event-title">Past Events</h2>
+    <h3>Earth Day: Election Edition</h3>
+    <p>The Earth deserves to be celebrated more than once per year!  We celebrated Earth Day's half-birthday on October 22, 2022 from 10 AM - 2 PM at Lake Elizabeth in Fremont.  See our <a href="/OctoberEarthDay2022">Earth Day: Election Edition</a> page for more details.</p>
   </div> 
    <div class="page-footer columns">
       <div class="col">
