Noted that next election is 2024

--- a/web/elections.html
+++ b/web/elections.html
@@ -45,7 +45,8 @@
       <p> At CCL we strive to develop relationships with the people who represent us in government, and often call and write their offices to keep climate change at the top of their minds.</p>
     <div class="upcoming">
       <img src="images/Vote-zoom.jpg" id="image-vote" alt="Screenshot of four people on a zoom screen, holding the letters V,O,T and E"/>   
-      <h2 span style="color:#5A7931;"> Upcoming Elections</h2>   
+      <h2 span style="color:#5A7931;"> Upcoming Elections</h2>
+      <p>The next election is expected in 2024.</p>
       <p> More information at the California Secretary of State Website: <a href="https://www.sos.ca.gov/elections" target="_blank" rel="noopener noreferrer">sos.ca.gov/elections</a></p>
     </div> <!--upcoming-->  
       
