Replace front-page photo with a more recent one, and update text to be accurate now that we sometimes meet in person

--- a/web/index.html
+++ b/web/index.html
@@ -38,10 +38,10 @@
     </div><!-- page-title -->
     <h2 class="visually-hidden">Introduction</h2>
     <div class="picture-frame picture-frame-left">
-      <img src="images/chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
+      <img src="images/ccl_sve_20230812_meeting_cropped.jpg" alt="selfie of eight people, half of whom are wearing face masks, sitting around a long conference table with laptops, notes, and water bottles"/>
       <div class="picture-adjacent">
         <p><a href="https://citizensclimatelobby.org/">Citizens' Climate Lobby</a> empowers ordinary people to make their voice heard on climate change.  We're the Silicon Valley East local chapter, representing Fremont, Newark, Union City, Milpitas, and surrounding areas.</p>
-        <p>We meet monthly on the second Saturday at 4 PM.  Due to the pandemic, our meetings are all currently virtual. Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> for call-in information.  We're friendly!</p>
+        <p>We meet monthly on the second Saturday at 4 PM.  Sometimes we meet in person, and sometimes we meet virtually. Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> for information about upcoming meetings.  We're friendly!</p>
         <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
       </div>
     </div>
